変更しました

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,12 +31,12 @@ dependencies:
   flutter:
     sdk: flutter
   path_provider: any
+  flutter_svg: any
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
-  marquee: any
 
 dev_dependencies:
   flutter_test:
@@ -56,7 +56,8 @@ dev_dependencies:
 flutter:
   assets:
     - assets/documents/odai.txt
-
+    - assets/images/GitHub/Github-Dark.svg
+    - assets/images/GitHub/image_GitHub.jpg
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
