--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,11 +31,12 @@ dependencies:
   flutter:
     sdk: flutter
   path_provider: any
-  flutter_svg: any
+  flutter_svg: ^2.0.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  cached_network_image: ^3.2.3
 
 
 dev_dependencies:
@@ -56,8 +57,8 @@ dev_dependencies:
 flutter:
   assets:
     - assets/documents/odai.txt
-    - assets/images/GitHub/Github-Dark.svg
-    - assets/images/GitHub/image_GitHub.jpg
+    - assets/images/PhotoShop/PhotoShop.svg
+    - assets/images/GitHub/GitHub.svg
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
